# edu-resource-site

./: .gitignore  CLAUDE.md  build.sh  pyproject.toml  render.yaml  seed_blogs.py
backend/: auth.py  database.py  main.py
backend/models/: __init__.py  assignment.py  blog_post.py  comment.py  instruction_page.py  supplementary_material.py  user.py
backend/routes/: __init__.py  admin.py  assignments.py  auth.py  blog.py  comments.py  github_browser.py  instructions.py  materials.py
backend/services/: file_service.py  github_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/: BranchViewer.jsx  CommentThread.jsx  ErrorBoundary.jsx  Layout.jsx  MarkdownRenderer.jsx  MaterialsList.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/lib/: api.js  utils.js
frontend/src/pages/: AdminDashboard.jsx  AdminSubmit.jsx  AssignmentDetail.jsx  BlogEditor.jsx  BlogList.jsx  BlogPost.jsx  Home.jsx  InstructionEditor.jsx  InstructionPage.jsx  InstructionsList.jsx  Login.jsx  Profile.jsx  Register.jsx
